# sawConstraintController

./: CHANGELOG.md  CMakeLists.txt  README.md  colcon.pkg  package.xml  saw_constraint_controller.rosinstall
cmake/: InstallSettings.cmake  sawConstraintControllerConfig.cmake.in
code/: CMakeLists.txt  mtsRobotTask.cpp  mtsVFAbsoluteJointLimits.cpp  mtsVFBase.cpp  mtsVFCartOrientationVel.cpp  mtsVFCartVel.cpp  mtsVFController.cpp  mtsVFDaVinciFollow.cpp  mtsVFDataAbsoluteJointLimits.cdg  mtsVFDataBase.cdg  mtsVFDataCartesianTranslation.cdg  mtsVFDataFollow.cdg  mtsVFDataPlane.cdg  mtsVFDataSensorCompliance.cdg  mtsVFDataSideview.cdg  mtsVFFollow.cpp  mtsVFFollowJacobian.cpp  mtsVFJointLimits.cpp  mtsVFJointPos.cpp  mtsVFJointVel.cpp  mtsVFPlane.cpp  mtsVFSensorCompliance.cpp  mtsVFSideview.cpp  mtsVF_RCM.cpp  prmDaVinciKinematicsState.cpp  prmForceOffsetState.cdg  prmJointState.cdg  prmKinematicsOffsetState.cdg  prmKinematicsState.cdg  prmOffsetState.cdg  prmSensorState.cdg  sawConstraintControllerConfig.cmake.in  sawConstraintControllerRevision.h.in
components/: CMakeLists.txt  package.xml
components/cmake/: sawConstraintControllerConfig.cmake.in  sawConstraintControllerConfig.cmake.in~
components/code/: QuadProg++.cpp  ccl_helper.cpp  ccl_helper.h  constraintControllerLite.cpp  constraintOptimizer.cpp  eiquadprog.hpp  mtsConstraintAbsoluteJointLimits.cpp  mtsConstraintFixOrientation.cpp  mtsConstraintFollowPositionTraj.cpp  mtsConstraintJointVelLimits.cpp  mtsConstraintStayOnAxis.cpp  mtsVFAbsoluteJointLimits.cpp  mtsVFBase.cpp  mtsVFCartOrientationVel.cpp  mtsVFCartVel.cpp  mtsVFCartesianLimits.cpp  mtsVFController.cpp  mtsVFCylinder.cpp  mtsVFDataAbsoluteJointLimits.cdg  mtsVFDataBase.cdg  mtsVFDataCartesianTranslation.cdg  mtsVFDataCylinder.cdg  mtsVFDataJointLimits.cdg  mtsVFDataPlane.cdg  mtsVFDataRCM.cdg  mtsVFDataSensorCompliance.cdg  mtsVFFollow.cpp  mtsVFJointLimits.cpp  mtsVFJointPos.cpp  mtsVFJointVel.cpp  mtsVFLimitsConstraint.cpp  mtsVFMesh.cpp  mtsVFPlane.cpp  mtsVFRCM.cpp  mtsVFSensorCompliance.cpp  mtsVF_RCM.cpp  prmForceOffsetState.cdg  prmJointState.cdg  prmKinematicsOffsetState.cdg  prmKinematicsState.cdg  (+6 more)
components/code/cdg/: mtsVFDataBase.cdg  mtsVFDataCartesianTranslation.cdg  mtsVFDataCylinder.cdg  mtsVFDataJointLimits.cdg  mtsVFDataMesh.cdg  mtsVFDataPlane.cdg  mtsVFDataSensorCompliance.cdg  prmForceOffsetState.cdg  prmKinematicsOffsetState.cdg  prmKinematicsState.cdg  prmSensorState.cdg
components/include/sawConstraintController/: constraintControllerLite.h  constraintOptimizer.h  mtsConstraintAbsoluteJointLimits.h  mtsConstraintBase.h  mtsConstraintFixOrientation.h  mtsConstraintFollowPositionTraj.h  mtsConstraintJointVelLimits.h  mtsConstraintStayOnAxis.h  mtsVFAbsoluteJointLimits.h  mtsVFBase.h  mtsVFCartOrientationVel.h  mtsVFCartVel.h  mtsVFCartesianLimits.h  mtsVFController.h  mtsVFCylinder.h  mtsVFFollow.h  mtsVFJointLimits.h  mtsVFJointPos.h  mtsVFJointVel.h  mtsVFLimitsConstraint.h  mtsVFMesh.h  mtsVFPlane.h  mtsVFRCM.h  mtsVFSensorCompliance.h  mtsVF_RCM.h  roPath.h  roPathSegment.h  sawConstraintControllerExport.h  testClass.h
examples/: CMakeLists.txt  package.xml
examples/BasicSetup/: CMakeLists.txt  main.cpp  mtsRobotTask.cpp  mtsRobotTask.h
examples/CSA/: CMakeLists.txt  CSABase.cpp  CSABase.h  main.cpp  package.xml  simpleRobot.cpp  simpleRobot.h
examples/Coop/: CMakeLists.txt  main.cpp  package.xml  simpleRobot.cpp  simpleRobot.h
examples/Coop/scripts/: coop.py  simple_robot.rviz
examples/SimpleCommunication/: CMakeLists.txt  devRobotLoggerTask.cpp  devRobotLoggerTask.h  main.cpp  mtsRobotTask.cpp  mtsRobotTask.h  mtsSimpleVFController.cpp  mtsSimpleVFController.h  mtsVFControllerTask.cpp  mtsVFControllerTask.h  mtsVFSenderTask.cpp  mtsVFSenderTask.h  prmSimpleRobotKinematicsState.cpp  prmSimpleRobotKinematicsState.h
examples/Teleop/: CMakeLists.txt  main.cpp  package.xml  simpleRobot.cpp  simpleRobot.h
examples/Teleop/scripts/: keyboard.py  simple_robot.rviz  teleop.py
examples/code/: main_coop.cpp  main_teleop.cpp  simple_coop.cpp  simple_coop.h  simple_teleop.cpp  simple_teleop.h
examples/scripts/: slicer.py  teleop.py
include/sawConstraintController/: mtsRobotTask.h  mtsVFAbsoluteJointLimits.h  mtsVFBase.h  mtsVFCartOrientationVel.h  mtsVFCartVel.h  mtsVFController.h  mtsVFDaVinciFollow.h  mtsVFFollow.h  mtsVFFollowJacobian.h  mtsVFJointPos.h  mtsVFJointVel.h  mtsVFPlane.h  mtsVFSensorCompliance.h  mtsVFSideview.h  prmDaVinciKinematicsState.h  sawConstraintControllerExport.h
ros/: CMakeLists.txt  mts_ros_crtk_ccl_bridge.cpp  package.xml
ros/include/sawConstraintController/: mts_ros_crtk_ccl_bridge.h
share/: CMakeLists.txt  constraints_config_example.json  package.xml
