<package>
  <name>saw_constraint_controller</name>
  <version>1.1.0</version>
  <description>
  sawConstraintController
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawConstraintController</url>

  <build_depend>cisst</build_depend>
  <build_depend>cisst_netlib</build_depend>
  <run_depend>cisst</run_depend>
  <run_depend>cisst_netlib</run_depend>


  <export>
    <build_type>catkin</build_type>
  </export>

</package>
