<package>
  <name>saw_constraint_controller_examples</name>
  <version>1.1.0</version>
  <description>
  sawConstraintController examples
  </description>
  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>
  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawConstraintController</url>

  <build_depend>saw_constraint_controller</build_depend>
  <run_depend>saw_constraint_controller</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>
