<package>
  <name>saw_constraint_controller_examples</name>
  <version>1.1.0</version>
  <description>
  csa_example
  </description>
  <maintainer email="zli122@jhu.edu">Max Zhaoshuo Li</maintainer>
  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cisst</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>saw_constraint_controller</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cisst</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>saw_constraint_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
