<package>
  <name>saw_constraint_controller_lite_crtk_bridge</name>
  <version>1.0.0</version>
  <description>
  ConstraintedControllerLite ROS bridge
  </description>
  <maintainer email="henry.phalen@jhu.edu">Henry Phalen</maintainer>
  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cisst_ros_crtk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>cisst_ros_crtk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

  <export>
  </export>

</package>
