<?xml version="1.0"?>
<package>
  <name>saw_constraint_controller_config</name>
  <version>1.0.0</version>
  <description>sawConstraintController config files</description>

  <maintainer email="anton.deguet@jhu.edu">Anton Deguet</maintainer>

  <license>cisst</license>
  <url>https://github.com/jhu-saw/sawConstraintController</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
