<package>
  <name>simple_coop</name>
  <version>1.3.0</version>
  <description>
  csa_example
  </description>
  <maintainer email="zli122@jhu.edu">Max Zhaoshuo Li</maintainer>
  <license>cisst</license>

  <build_depend>catkin</build_depend>
  <build_depend>cisst_netlib</build_depend>
  <build_depend>cisst</build_depend>
  <build_depend>saw_constraint_controller</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cisst_netlib</run_depend>
  <run_depend>cisst</run_depend>
  <run_depend>saw_constraint_controller</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
